tests/errors/002-parsing/001-unexpected-code.xxx
x := 1 something something something something
